--- a/sw/projects/forth_core_test/CMakeLists.txt
+++ b/sw/projects/forth_core_test/CMakeLists.txt
@@ -3,7 +3,6 @@
 #
 
 add_executable(forth_core_test
- EXCLUDE_FROM_ALL
    testsuite.cpp
    testsuite.fs
 )
@@ -20,4 +19,10 @@ target_link_libraries(forth_core_test forth_core timer gpio bootstrap)
 
 add_flash_sw_target(forth_core_test)
 
-
+if(CMAKE_BUILD_TYPE STREQUAL "fpga")
+#Automated test
+add_test(NAME forth_core_test_test
+    COMMAND python3 forth_core_test.py
+    WORKING_DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/test
+)
+endif()
