--- a/sw/components/forth_core/CMakeLists.txt
+++ b/sw/components/forth_core/CMakeLists.txt
@@ -21,7 +21,7 @@ target_sources(forth_core
   PRIVATE
     mecrisp-quintus-boxlambda.s
     forth.cpp
-    included-tools.fs
+    init.fs
     stamp
 )
 
