--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-click==8.1.3
+click==8.1.8
     # via mkdocs
 ghp-import==2.1.0
     # via mkdocs
@@ -6,11 +6,11 @@ griffe==0.22.0
     # via mkdocstrings-python
 importlib-metadata==4.12.0
     # via mkdocs
-jinja2==3.1.2
+jinja2==3.1.5
     # via
     #   mkdocs
     #   mkdocstrings
-markdown==3.3.7
+markdown==3.7
     # via
     #   markdown-include
     #   mkdocs
@@ -19,13 +19,16 @@ markdown==3.3.7
     #   pymdown-extensions
 markdown-include==0.6.0
     # via -r docs/requirements.in
-markupsafe==2.1.1
+markupsafe==3.0.2
     # via
     #   jinja2
     #   mkdocstrings
 mergedeep==1.3.4
     # via mkdocs
-mkdocs==1.3.0
+mkdocs==1.6.1
+mkdocs-glightbox==0.4.0
+mkdocs-material==9.6.1
+mkdocs-material-extensions==1.3.1
     # via
     #   -r docs/requirements.in
     #   mkdocs-autorefs
@@ -38,15 +41,15 @@ mkdocstrings[python]==0.19.0
     #   mkdocstrings-python
 mkdocstrings-python==0.7.1
     # via mkdocstrings
-packaging==21.3
+packaging==24.2
     # via mkdocs
-pymdown-extensions==9.5
+pymdown-extensions==10.14.3
     # via mkdocstrings
 pyparsing==3.0.9
     # via packaging
 python-dateutil==2.8.2
     # via ghp-import
-pyyaml==6.0
+pyyaml==6.0.2
     # via
     #   mkdocs
     #   pyyaml-env-tag
